# EasyInstaller

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg-configuration.json  vcpkg.json
src/: main.cpp
src/Win/System/: Environment.cpp  Environment.hpp
